feat(device) add test: Archos 50 Power

--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -9049,3 +9049,21 @@
     model: Hammer Iron 2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 5.1; Archos 50 Power) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.216 YaApp_Android/21.54.1 YaSearchBrowser/21.54.1 BroPP/1.0 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.54.1
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Archos
+    model: 50 Power
+  os_family: Android
+  browser_family: Unknown
