feat(device) detect brand ZTE models: Blade L4 Pro, Blade A2, Blade A1 feat(device) detect brand Neffos model: C5 Plus feat(device) detect brand Nomi model: Iron-X1 (i5071) feat(device) detect brand NOA model: N8 feat(device) detect brand Inoi model: 6 Lite feat(device) detect brand Nomu model: S50 Pro feat(device) detect brand Doogee model: S55_Lite feat(device) detect brand Senseit model: J2 feat(tests) adds test: Xiaomi Redmi Note 5, Samsung Galaxy A20(SM-A205F), Samsung Galaxy A30 (SM-A305F), Infinix Zero 5 (X603)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5058,7 +5058,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S[478]0Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|Iron-bone DG750|X10S|X60L|MIX2)(?:[);/ ]|$)'
+  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S[478]0Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|S55_Lite|Iron-bone DG750|X10S|X60L|MIX2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -5083,6 +5083,8 @@ Doogee:
       model: 'BL5500 Lite'
     - regex: 'BL12000'
       model: 'BL12000'
+    - regex: 'S55_Lite'
+      model: 'S55 Lite'
     - regex: 'S([568]8|9[056]|59|40)Pro'
       model: 'S$1 Pro'
     - regex: 'S([478]0)Lite'
@@ -11775,7 +11777,7 @@ Neffos:
       model: 'Y50'
     - regex: 'Neffos X20 Pro'
       model: 'X20 Pro'
-    - regex: 'Neffos[_ ]((?:[YNCXA])[0-9][A-Z]?(?: Max| Lite)?)'
+    - regex: 'Neffos[_ ]((?:[YNCXA])[0-9][A-Z]?(?: Max| Lite | Plus)?)'
       model: '$1'
 
 # Nextbit
@@ -11883,7 +11885,7 @@ Noblex:
 
 # Nomu
 Nomu:
-  regex: '(?:Nomu[ _-](?:T18|S30mini|S10)|(?:V1600S|S10 PRO))(?:[);/ ]|$)'
+  regex: '(?:Nomu[ _-](?:T18|S30mini|S10)|(?:V1600S|S10 PRO|S50_Pro))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Nomu[ _-]T18(?:[);/ ]|$)'
@@ -11892,8 +11894,8 @@ Nomu:
       model: 'S10'
     - regex: 'Nomu[ _-]S30mini(?:[);/ ]|$)'
       model: 'S30 Mini'
-    - regex: 'S10 PRO(?:[);/ ]|$)'
-      model: 'S10 Pro'
+    - regex: 'S([15]0)[_ ]PRO(?:[);/ ]|$)'
+      model: 'S$1 Pro'
     - regex: '(V1600S)(?:[);/ ]|$)'
       model: '$1'
 
@@ -11922,6 +11924,8 @@ Nomi:
       model: 'Evo M3'
     - regex: 'I5070(?:[);/ ]|$)'
       model: 'Iron-X'
+    - regex: 'i5071(?:[);/ ]|$)'
+      model: 'Iron-X1'
     - regex: 'i5014(?:[);/ ]|$)'
       model: 'Evo M4'
     - regex: 'i5032(?:[);/ ]|$)'
@@ -19095,6 +19099,8 @@ ZTE:
       model: 'Blade L3'
     - regex: 'ZTE[ _]T610(?:[);/ ]|$)'
       model: 'Blade L4'
+    - regex: 'ZTE[ _]Blade L4 Pro(?:[);/ ]|$)'
+      model: 'Blade L4 Pro'
     - regex: '(?:Blade L5 Plus|BLADE L0510)(?:[);/ ]|$)'
       model: 'Blade L5 Plus'
     - regex: 'Blade L5(?:[);/ ]|$)'
@@ -19109,6 +19115,10 @@ ZTE:
       model: 'Blade L8'
     - regex: 'Blade A([357]) (20(?:19|20))'
       model: 'Blade A$1 ($2)'
+    - regex: 'ZTE BV0720(?:[);/ ]|$)'
+      model: 'Blade A2'
+    - regex: 'ZTE C880A(?:[);/ ]|$)'
+      model: 'Blade A1'
     - regex: 'Blade A(31?) Lite'
       model: 'Blade A$1 Lite'
     - regex: 'BLADE A0622(?:[);/ ]|$)'
