Detect devices for existing brands: Lenovo, Xiaomi, Samsung, Asus, ZTE, Vivo, Hyundai, Motorola, NYX Mobile, OPPO, LG, Sharp, Realme (#6811)
* feat(device) detect brand Lenovo model: Tab M10 HD
feat(device) detect brand Xiaomi model: Redmi 9 (lancelot)
feat(device) detect brand Samsung model: Galaxy J5 (2017) (lineage_j5y17lte)
feat(device) detect brand Asus model: ZenFone 8 (ZS590KS)
feat(device) detect brand ZTE model: Axon 11 5G (A2021)
feat(device) detect brand Vivo model: V20 Pro (2018), Y20G (V2037)

feat(test) add tests Samsung Galaxy S10+ (SM-G9750, SM-G975U)

* feat(device) detect brand Vivo models: V17 (1919), Y51s (V2031), Y12s (V2033), Y51 (V2035), Y50 (1935), Z1 Pro (1951)
feat(device) renamed H40 Lite model to Infinity H40 Lite for the Hisense brand
feat(test) adds test: Samsung Galaxy S20+ 5G (SM-G986U)

* feat(device) detect brand ZTE models: Axon 20 5G (A2121L), Blade V2020 Smart (8010), Axon 11 5G (A2021L)
feat(device) detect brand Hyundai model: Eternity G60
feat(tests) adds test: Huawei Y9 Prime (2019) (STK-LX3)

* feat(device) detect brand Motorola model: Moto E6s
feat(device) detect brand Lenovo model:Tab E7 (TB-7104F)

feat(device) added tests: Motorola Moto G7 Plus, Huawei Y7 (2018) (LDN-LX3), Nokia 5 (TA-1027)

* feat(device) detect brand Huawei models: P9 Lite (VNS-L53, VNS-L23)
feat(device) detect brand NYX Mobile model: Glam
feat(device) detect brand Sharp model: Aquos Sense 4 (SH-41A)
feat(device) detect brand Realme models: 8 5G (RMX3241), Narzo 30 5G (RMX3242)

feat(device) added tests: Xiaomi Redmi Note 9S, Huawei P30 (ELE-L04), Huawei Y7 Prime (2018) (TRT-L53),
 Huawei P smart (FIG-LX3), ZTE Blade V8 SE, Samsung Galaxy A20 (SM-A205FN)

* feat(device) detect brand Oppo model: A93 (CPH2123)
feat(device) detect brand ZTE model: Blade V2020 (9000)
feat(device) detect brand Hyundai model: Eternity G57
feat(device) detect brand LG models: K56 (LM-K525), K56 Plus (LM-K526)
feat(device) detect brand Motorola

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2474,7 +2474,7 @@ Garmin-Asus:
 
 # Asus
 Asus:
-  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|(?:P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)|K01[579N])(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[013])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D|P01Y_S'
+  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|(?:P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)|K01[579N])(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[013])KS|ZS(6[0236]0|55[10])KL|ZS590KS|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D|P01Y_S'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -2611,7 +2611,7 @@ Asus:
       model: 'PadFone Infinity'
     - regex: '(?:ASUS_)?A002(A)?'
       model: 'ZenFone AR'
-    - regex: '(?:ASUS_)?I006D'
+    - regex: '(?:ASUS_)?(?:I006D|ZS590KS)'
       model: 'ZenFone 8'
     - regex: '(?:ASUS_)?I004D'
       model: 'ZenFone 8 Flip'
@@ -3126,7 +3126,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0268]|V2031[E]?A|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|V206[16])(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|V206[16])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3223,12 +3223,14 @@ Vivo:
       model: 'V17 Pro'
     - regex: 'vivo 1907(?:_19)?(?:[);/ ]|$)'
       model: 'V17 Neo'
-    - regex: 'vivo 1920(?:[);/ ]|$)'
+    - regex: 'vivo 19(?:20|19)(?:[);/ ]|$)'
       model: 'V17'
     - regex: 'vivo 1933(?:[);/ ]|$)'
       model: 'V19'
     - regex: 'V2022(?:[);/ ]|$)'
       model: 'V20 SE'
+    - regex: 'vivo 2018(?:[);/ ]|$)'
+      model: 'V20 Pro'
     - regex: '(?:VIV-|BBG-)?vivo[ _]1601(?:[);/ ]|$)'
       model: 'V5'
     - regex: 'vivo 1609(?:[);/ ]|$)'
@@ -3297,6 +3299,8 @@ Vivo:
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
       model: 'Y20'
+    - regex: 'V2037(?:[);/ ]|$)'
+      model: 'Y20G'
     - regex: 'V2028(?:[);/ ]|$)'
       model: 'Y11s'
     - regex: 'V2038(?:[);/ ]|$)'
@@ -3325,10 +3329,12 @@ Vivo:
       model: 'Y31s'
     - regex: 'V1934A(?:[);/ ]|$)'
       model: 'Y5s'
-    - regex: 'V1965A(?:[);/ ]|$)'
+    - regex: '(?:V1965A|vivo 1935)(?:[);/ ]|$)'
       model: 'Y50'
-    - regex: 'V2030(?:[);/ ]|$)'
+    - regex: 'V203[05](?:[);/ ]|$)'
       model: 'Y51'
+    - regex: 'V2031(?:[);/ ]|$)'
+      model: 'Y51s'
     - regex: 'V2054A(?:[);/ ]|$)'
       model: 'Y31s'
     - regex: 'V2057A(?:[);/ ]|$)'
@@ -3373,7 +3379,7 @@ Vivo:
       model: 'Y91'
     - regex: 'V1945A(?:[);/ ]|$)'
       model: 'Y9s'
-    - regex: 'V2026(?:[);/ ]|$)'
+    - regex: '(?:V2026|V2033)(?:[);/ ]|$)'
       model: 'Y12s'
     - regex: 'vivo 18(16|20)(?:[);/ ]|$)'
       model: 'Y91i'
@@ -3387,7 +3393,7 @@ Vivo:
       model: 'Y97'
     - regex: 'V1801A0(?:[);/ ]|$)'
       model: 'Z1'
-    - regex: 'vivo 1918(?:[);/ ]|$)'
+    - regex: 'vivo (?:1918|1951)(?:[);/ ]|$)'
       model: 'Z1 Pro'
     - regex: 'V1730D[AT](?:[);/ ]|$)'
       model: 'Z1i'
@@ -6821,8 +6827,8 @@ Hisense:
       model: 'H20'
     - regex: 'HLTE500T(?:[);/ ]|$)'
       model: 'H11'
-    - regex: 'HLTE230E(?:[);/ ]|$)'
-      model: 'H40 Lite'
+    - regex: '(?:HLTE230E|Infinity H40 Lite)(?:[);/ ]|$)'
+      model: 'Infinity H40 Lite'
     - regex: 'HLTE720T(?:[);/ ]|$)'
       model: 'U30'
       device: 'phablet'
@@ -7363,7 +7369,7 @@ Huawei:
       model: 'P8 Lite (2017)'
     - regex: 'EVA-(?:AL[10]0|L[012]9|[TCD]L00)(?:[);/ ]|$)'
       model: 'P9'
-    - regex: 'VNS-L(?:[23]1|[26]2)(?:[);/ ]|$)'
+    - regex: 'VNS-L(?:[23]1|[26]2|53|23)(?:[);/ ]|$)'
       model: 'P9 Lite'
     - regex: 'SLA-L(?:02|03|22|23)(?:[);/ ]|$)'
       model: 'P9 Lite Mini'
@@ -7634,7 +7640,7 @@ Hyundai:
       model: 'L503F Plus'
     - regex: 'L503F Plus'
       model: 'L503F Plus'
-    - regex: '(?:Hyundai_)?(Eternity_G57L)'
+    - regex: '(?:Hyundai_)?(Eternity_(?:G57L?|G60))'
       model: '$1'
 
     # explicit tables models
@@ -9436,7 +9442,7 @@ Lenovo:
     - regex: 'TB-X705F(?:[);/ ]|$)'
       model: 'Tab P10'
       device: 'tablet'
-    - regex: 'TB-7104I(?:[);/ ]|$)'
+    - regex: 'TB-7104[IF](?:[);/ ]|$)'
       model: 'Tab E7'
       device: 'tablet'
     - regex: 'TB-8304F1(?:[);/ ]|$)'
@@ -9450,6 +9456,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'TB-X606[FXV](?:[);/ ]|$)'
       model: 'Tab M10 FHD Plus'
+      device: 'tablet'
+    - regex: 'Lenovo TB-X306'
+      model: 'Tab M10 HD'
       device: 'tablet'
     - regex: 'TB-7305I(?:[);/ ]|$)'
       model: 'Tab M7'
@@ -9564,6 +9573,8 @@ Lenovo:
       model: 'C2'
     - regex: '(?:k50a40|K50-t5)(?:[);/ ]|$)'
       model: 'K3 Note'
+    - regex: 'K(1[30]) Note(?:[);/ ]|$)'
+      model: 'K$1 Note'
     - regex: 'A7010a48(?:[);/ ]|$)'
       model: 'K4 Note'
     - regex: 'K350t(?:[);/ ]|$)'
@@ -10110,6 +10121,10 @@ LG:
       model: 'K51S'
     - regex: 'LM-K520(?:[);/ ]|$)'
       model: 'K52'
+    - regex: 'LM-K525(?:[);/ ]|$)'
+      model: 'K56'
+    - regex: 'LM-K526(?:[);/ ]|$)'
+      model: 'K56 Plus'
     - regex: 'LM-Q510N(?:[);/ ]|$)'
       model: 'Q51'
     - regex: 'LM-Q630N?(?:[);/ ]|$)'
@@ -11323,6 +11338,8 @@ Motorola:
       model: 'Moto E6 Play'
     - regex: 'Moto E\(?([67])\)?(?:[);/ ]|$)'
       model: 'Moto E$1'
+    - regex: 'Moto E\(?([67])s\)?(?:[);/ ]|$)'
+      model: 'Moto E$1s'
     - regex: '(?:MOT-|Motorola-)?XT1030'
       model: 'Droid Mini'
     - regex: '(?:MOT-|Motorola-)?XT1096'
@@ -11345,7 +11362,7 @@ Motorola:
       model: 'Moto G7 Plus'
     - regex: '(?:MOT-|Motorola-)?XT10(?:49|5[23568]|60|9[23457])'
       model: 'Moto X'
-    - regex: '(?:MOT-|Motorola-)?XT156[23]'
+    - regex: '(?:MOT-|Motorola-)?XT156[23]|Moto X Play(?:[);/ ]|$)'
       model: 'Moto X Play'
     - regex: '(?:MOT-|Motorola-)?XT1572'
       model: 'Moto X Style'
@@ -11355,13 +11372,15 @@ Motorola:
       model: 'Moto Z'
     - regex: 'moto z4(?:[);/ ]|$)'
       model: 'Moto Z4'
+    - regex: 'Moto Z3 Play(?:[);/ ]|$)'
+      model: 'Moto Z3 Play'
     - regex: '(?:MOT-|Motorola-)?XT1635(?:-0[1-3])?'
       model: 'Moto Z Play'
     - regex: '(?:MOT-|Motorola-)?XT1710-(?:-0[28])?'
       model: 'Moto Z2 Play'
     - regex: '(?:MOT-|Motorola-)?XT1789-05'
       model: 'Moto Z2 Force'
-    - regex: '(?:MOT-|Motorola-)?XT1929-15'
+    - regex: '(?:MOT-|Motorola-)?XT1929-15|moto z3(?:[);/ ]|$)'
       model: 'Moto Z3'
     - regex: '(?:MOT-|Motorola-)?XT1663'
       model: 'Moto M'
@@ -11375,6 +11394,8 @@ Motorola:
       model: 'Edge Plus'
     - regex: '(?:MOT-|Motorola-)?edge'
       model: 'Edge'
+    - regex: '(?:MOT-|Motorola-)?one vision plus'
+      model: 'One Vision Plus'
     - regex: '(?:MOT-|Motorola-)?(?:XT1970-5|one vision)'
       model: 'One Vision'
     - regex: '(?:MOT-|Motorola-)?one power'
@@ -11960,7 +11981,7 @@ NUU Mobile:
 
 # NYX Mobile
 NYX Mobile:
-  regex: 'NYX[ _]'
+  regex: 'NYX[ _]|(?:GLAM)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'NYX_A1'
@@ -12001,6 +12022,8 @@ NYX Mobile:
       model: 'Vox'
     - regex: 'NYX_ZEUZ_HD'
       model: 'Zeus HD'
+    - regex: 'GLAM'
+      model: 'Glam'
 
 # Nous
 Nous:
@@ -12330,7 +12353,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[012]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|[36]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|91))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[012]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|91))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -12387,6 +12410,8 @@ Realme:
       model: '8 Pro'
     - regex: 'RMX3085'
       model: '8'
+    - regex: 'RMX3241'
+      model: '8 5G'
     - regex: 'RMX1925(?:[);/ ]|$)'
       model: '5S'
     - regex: 'RMX1811(?:[);/ ]|$)'
@@ -12423,6 +12448,8 @@ Realme:
       model: 'Narzo 20'
     - regex: 'RMX2050(?:[);/ ]|$)'
       model: 'Narzo 20A'
+    - regex: 'RMX3242'
+      model: 'Narzo 30 5G'
     - regex: 'RMX1831(?:[);/ ]|$)'
       model: 'U1'
     - regex: 'RMX(?:20(?:51|[2]5)|2144)(?:[);/ ]|$)'
@@ -12540,7 +12567,7 @@ OPPO:
       model: 'A92'
     - regex: 'PDKT00(?:[);/ ]|$)'
       model: 'A92s'
-    - regex: '(?:PEH[MT]00|CPH2121)(?:[);/ ]|$)'
+    - regex: '(?:PEH[MT]00|CPH212[13])(?:[);/ ]|$)'
       model: 'A93'
     - regex: 'PDKM00(?:[);/ ]|$)'
       model: 'A93s'
@@ -13418,7 +13445,7 @@ Soundmax:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple (?!III)|SC-(?:01[FGHKLM]|02[CGHJKLM]|03[JKL]|04[EJL]|05[GL]|(?:4[12]|5[1234])A)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|(?<!GOG|GOG )Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86(?:[);/ ]|$)|(?:OTV-)?SMT-E5015|ISW11SC|40[34]SC|SC(?:V3[1-9]|V4[0-9]|51Aa|T21|G0[1-9]|G10|L2[234])(?:-[uj])?(?:[);/ ]|$)'
+  regex: 'SAMSUNG(?! ?Browser)|lineage_j5y17lte|Maple (?!III)|SC-(?:01[FGHKLM]|02[CGHJKLM]|03[JKL]|04[EJL]|05[GL]|(?:4[12]|5[1234])A)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|(?<!GOG|GOG )Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86(?:[);/ ]|$)|(?:OTV-)?SMT-E5015|ISW11SC|40[34]SC|SC(?:V3[1-9]|V4[0-9]|51Aa|T21|G0[1-9]|G10|L2[234])(?:-[uj])?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -14324,7 +14351,7 @@ Samsung:
       model: 'Galaxy J5 (2015)'
     - regex: '(?:SAMSUNG-)?SM-(?:J510(?:[FGMU]N|FQ|[8FGHKLSY])|5108|G510H)(?:[);/ ]|$)'
       model: 'Galaxy J5 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-J530'
+    - regex: '(?:SAMSUNG-)?SM-J530|lineage_j5y17lte'
       model: 'Galaxy J5 (2017)'
     - regex: '(?:SAMSUNG-)?SM-G570[0FMY]'
       model: 'Galaxy J5 Prime'
@@ -15612,6 +15639,8 @@ Sharp:
       model: 'Aquos Sense Plus'
     - regex: 'A003SH(?:[);/ ]|$)'
       model: 'Aquos Sense 4 Basic'
+    - regex: 'SH-41A(?:[);/ ]|$)'
+      model: 'Aquos Sense 4'
     - regex: '(?:SHG03|A004SH|SH-M17)(?:[);/ ]|$)'
       model: 'Aquos Sense 5G'
     - regex: 'SH-D01(?:[);/ ]|$)'
@@ -17773,7 +17802,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[GY]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[GY]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -17815,14 +17844,16 @@ Xiaomi:
       model: 'MI CC 9'
     - regex: 'Xiaomi_M2001J2E_TD-LTE(?:[);/ ]|$)'
       model: 'MI 10'
+    - regex: 'Mi 10 Pro(?:[);/ ]|$)'
+      model: 'MI 10 Pro'
     - regex: 'M2011K2[CG](?:[);/ ]|$)'
       model: 'MI 11'
-    - regex: 'M2007J3S[CYP](?:[);/ ]|$)'
-      model: 'MI 10T 5G'
     - regex: 'M2007J3S[GI](?:[);/ ]|$)'
       model: 'MI 10T Pro 5G'
     - regex: 'M2007J17G(?:[);/ ]|$)'
       model: 'MI 10T Lite 5G'
+    - regex: 'M2007J3S[CYP](?:[);/ ]|$)'
+      model: 'MI 10T 5G'
     - regex: 'M2007J1SC(?:[);/ ]|$)'
       model: 'MI 10 Ultra 5G'
     - regex: 'M2102J2SC(?:[);/ ]|$)'
@@ -17887,7 +17918,7 @@ Xiaomi:
       model: 'Redmi 1'
     - regex: 'M2004J7AC(?:[);/ ]|$)'
       model: 'Redmi 10X'
-    - regex: '(?:M2004J19C|M2006C3MII)(?:[);/ ]|$)'
+    - regex: '(?:M2004J19C|M2006C3MII|lancelot)(?:[);/ ]|$)'
       model: 'Redmi 9'
     - regex: 'M2010J19SI(?:[);/ ]|$)'
       model: 'Redmi 9 Power'
@@ -18840,6 +18871,8 @@ ZTE:
       model: 'Blade 20 Smart'
     - regex: '902ZT(?:[);/ ]|$)'
       model: 'Axon 10 Pro 5G'
+    - regex: 'A2021L?(?:[);/ ]|$)'
+      model: 'Axon 11 5G'
     - regex: 'N799D(?:[);/ ]|$)'
       model: 'Blade Eg'
     - regex: 'Z818L(?:[);/ ]|$)'
@@ -19236,6 +19269,15 @@ ZTE:
       model: 'Vergatario 5 Plus'
     - regex: 'ZTE V5 PRO(?:[);/ ]|$)'
       model: 'V5 Pro'
+    - regex: 'ZTE 9000'
+      model: 'Blade V2020'
+
+    - regex: 'A2121L(?:[);/ ]|$)'
+      device: 'phablet'
+      model: 'Axon 20 5G'
+    - regex: 'ZTE 8010'
+      device: 'phablet'
+      model: 'Blade V2020 Smart'
 
     # explicit tablet models
     - regex: 'K83CA(?:[);/ ]|$)'
