feat(device) detect brand Tecno Mobile models: Pouvoir 2 Pro (LA7 Pro), Pop 4 (BC2c), Pop 4 Pro (BC3), DroidPad 7G (P704a) feat(device) detect brand ZTE models: Blade A5 Pro, Blade V10 (V1000RU), Blade L210, Blade A7 (2020) (A7000) feat(device) detect brand Vivo model: Y12 (1940) feat(device) detect brand Mintt model: UltraMintt A5 feat(device) detect brand Mobicel model: R1 Plus feat(device) detect brand AT&T model: Maestro Plus (V350U) feat(device) detect brand Pixus model: Touch 7 3G
feat(device) added tests: ZTE Blade A5 (2020), Blade A7 (2019), Blade V10 Vita, Huawei Nova 4 (VCE-L22)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3293,7 +3293,7 @@ Vivo:
       model: 'Y17'
     - regex: 'vivo 1906(?:[);/ ]|$)'
       model: 'Y11'
-    - regex: 'vivo 1904(?:[);/ ]|$)'
+    - regex: 'vivo 19(?:04|40)(?:[);/ ]|$)'
       model: 'Y12'
     - regex: 'vivo 1901(?:[);/ ]|$)'
       model: 'Y15'
@@ -11065,7 +11065,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -11096,6 +11096,8 @@ Mobicel:
       model: 'Fendy DS'
     - regex: 'R7_1'
       model: 'R7'
+    - regex: 'R1PLUS_1'
+      model: 'R1 Plus'
     - regex: 'Mobicel_(R1)'
       model: '$1'
 
@@ -13187,7 +13189,7 @@ Pioneer:
 
 # Pixus
 Pixus:
-  regex: 'Pixus|(hiPower|Ride[_ ][34]G|Play[ _]Three[ _]v(?:[234].0|3.1))(?:[);/ ]|$)'
+  regex: 'Pixus|(hiPower|Touch_7_3G|Ride[_ ][34]G|Play[ _]Three[ _]v(?:[234].0|3.1))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'Ride[_ ]([34])G'
@@ -13202,7 +13204,7 @@ Pixus:
       model: 'hiPower'
     - regex: 'Pixus[ _]Sprint'
       model: 'Sprint'
-    - regex: 'Touch 7 3G'
+    - regex: '(?:Pixus_)?Touch[ _]7[ _]3G'
       model: 'Touch 7 3G'
     - regex: 'Pixus[ _]hiMax'
       model: 'HiMax 9.6"'
@@ -16162,6 +16164,9 @@ Tecno Mobile:
     - regex: 'Tecno[ _]P703(?:[);/ ]|$)'
       model: 'DroidPad 7F'
       device: 'tablet'
+    - regex: 'Tecno[ _]P704a(?:[);/ ]|$)'
+      model: 'DroidPad 7G'
+      device: 'tablet'
     - regex: 'TECNO[ _]DP10A Pro(?:[);/ ]|$)'
       model: 'DroidPad 10A Pro'
       device: 'tablet'
@@ -16228,8 +16233,10 @@ Tecno Mobile:
       model: 'Pop 2X Plus'
     - regex: 'TECNO[ _]BB2(?:[);/ ]|$)'
       model: 'Pop 3'
-    - regex: 'TECNO[ _]BC2(?:[);/ ]|$)'
+    - regex: 'TECNO[ _]BC2c?(?:[);/ ]|$)'
       model: 'Pop 4'
+    - regex: 'TECNO[ _]BC3?(?:[);/ ]|$)'
+      model: 'Pop 4 Pro'
     - regex: 'TECNO[ _]BC1(?:[);/ ]|$)'
       model: 'Pop 4 Air'
     - regex: 'Tecno[ _]KA7(?:[);/ ]|$)'
@@ -16275,6 +16282,8 @@ Tecno Mobile:
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
+    - regex: 'TECNO[ _]LA7 Pro(?:[);/ ]|$)'
+      model: 'Pouvoir 2 Pro'
     - regex: 'TECNO[ _]LA7(?:[);/ ]|$)'
       model: 'Pouvoir 2'
     - regex: 'TECNO[ _]LB7(?:[);/ ]|$)'
@@ -18895,6 +18904,8 @@ ZTE:
       model: 'Blade AF3'
     - regex: 'A7020(?:[);/ ]|$)'
       model: 'Blade A7s (2020)'
+    - regex: 'A7000(?:[);/ ]|$)'
+      model: 'Blade A7 (2020)'
     - regex: 'A7030'
       model: 'Blade A71'
     - regex: 'ZTE 2050(?:RU)?'
@@ -19129,10 +19140,14 @@ ZTE:
       model: 'Blade S6 Plus'
     - regex: 'Blade S6(?:[);/ ]|$)'
       model: 'Blade S6'
+    - regex: 'BLADE A5 PRO(?:[);/ ]|$)'
+      model: 'Blade A5 Pro'
     - regex: 'T920(?:[);/ ]|$)'
       model: 'Blade S7'
     - regex: 'ZTE[ _]T617(?:[);/ ]|$)'
       model: 'Blade D Lux'
+    - regex: 'Blade L210'
+      model: 'Blade L210'
     - regex: 'BLADE V Ultra(?:[);/ ]|$)'
       model: 'Blade V Ultra'
     - regex: 'Blade V6 MAX(?:[);/ ]|$)'
@@ -19143,6 +19158,8 @@ ZTE:
       model: 'Blade V7 Lite'
     - regex: 'Blade V([67])(?:[);/ ]|$)'
       model: 'Blade V$1'
+    - regex: 'ZTE Blade V1000'
+      model: 'Blade V10'
     - regex: 'Blade X([79])(?:[);/ ]|$)'
       model: 'Blade X$1'
     - regex: 'Blade V8Q(?:[);/ ]|$)'
@@ -20836,7 +20853,7 @@ Tone:
 
 # AT&T
 AT&T:
-  regex: '(?:U304AA|QS5509A|U705AA|U318AA)(?:[);/ ]|$)'
+  regex: '(?:U304AA|QS5509A|U705AA|U318AA|V350U)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'U304AA(?:[);/ ]|$)'
@@ -20847,6 +20864,8 @@ AT&T:
       model: 'Axia'
     - regex: 'U318AA(?:[);/ ]|$)'
       model: 'Calypso'
+    - regex: 'V350U(?:[);/ ]|$)'
+      model: 'Maestro Plus'
 
 # BIHEE
 BIHEE:
@@ -22253,7 +22272,7 @@ Mintt:
   models:
     - regex: 'Coolmintt ?([PM]1|P3|A3|M2)(?:[);/ ]|$)'
       model: 'CoolMintt $1'
-    - regex: 'Ultramintt ?([SR]1|S2)(?:[);/ ]|$)'
+    - regex: 'Ultramintt ?([SR]1|S2|A5)(?:[);/ ]|$)'
       model: 'UltraMintt $1'
     - regex: 'FRESHMINTT ?(A7|A10)(?:[);/ ]|$)'
       device: 'tablet'
