feat(device) detect brand ZTE models: Blade A6 Max (A0605), Blade V8Q (V0840) feat(device) detect brand HTC model: U Ultra (2PZF1)
feat(device) added tests:
 * Asus: ZenFone 4 (Z01KD), ZenFone 3 (Z012DE, Z012DB, Z012DA), ZenFone 3 Deluxe (Z016S), ZenFone 5 (X00QDA)
 * Samsung: Galaxy J3 (2017) (SM-J330F), Galaxy J5 (2017) (SM-J530FM), Galaxy J7 Pro(SM-J730F, SM-J730FM)
 * Senseit: E510, R450

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -89,6 +89,8 @@ HTC:
     # explicit smartphone models
     - regex: '2PZC5(?:[);/ ]|$)'
       model: 'U11'
+    - regex: '2PZF1(?:[);/ ]|$)'
+      model: 'U Ultra'
     - regex: 'HTC_U-2u(?:[);/ ]|$)'
       model: 'U Play'
     - regex: '(?:U11 plus|(?:HTC_)?2Q4D100)(?:[);/ ]|$)'
@@ -19087,7 +19089,7 @@ ZTE:
       model: 'Blade A$1 Lite'
     - regex: 'BLADE A0622(?:[);/ ]|$)'
       model: 'Blade A6'
-    - regex: 'BLADE A6 MAX(?:[);/ ]|$)'
+    - regex: 'BLADE (?:A6 MAX|A0605)(?:[);/ ]|$)'
       model: 'Blade A6 Max'
     - regex: 'Blade S6 Plus(?:[);/ ]|$)'
       model: 'Blade S6 Plus'
@@ -19109,7 +19111,7 @@ ZTE:
       model: 'Blade V$1'
     - regex: 'Blade X([79])(?:[);/ ]|$)'
       model: 'Blade X$1'
-    - regex: 'Blade V8Q(?:[);/ ]|$)'
+    - regex: 'Blade (?:V8Q|V0840)(?:[);/ ]|$)'
       model: 'Blade V8Q'
     - regex: 'Blade V8 SE(?:[);/ ]|$)'
       model: 'Blade V8 SE'
