feat(device) detect brand Prestigio models: Muze B7 (PSP7511DUO), Grace R7 (PSP7501DUO), Wize NV3 (PSP3537DUO), Grace Z3 (PSP3533DUO)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15272,12 +15272,18 @@ Prestigio:
     - regex: 'PSP5530DUO'
       device: 'smartphone'
       model: 'Grace Z5'
+    - regex: 'PSP3533DUO'
+      device: 'smartphone'
+      model: 'Grace Z3'
     - regex: 'PSP5515DUO'
       device: 'smartphone'
       model: 'Grace P5'
     - regex: 'PSP5506DUO'
       device: 'smartphone'
       model: 'Grace Q5'
+    - regex: 'PSP7501DUO'
+      device: 'smartphone'
+      model: 'Grace R7'
     - regex: 'PSP3552DUO'
       device: 'smartphone'
       model: 'Muze H3'
@@ -15302,15 +15308,21 @@ Prestigio:
     - regex: 'Muze C3(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
-    - regex: 'PSP3532DUO(?:[);/ ]|$)'
+    - regex: 'PSP3532DUO'
       device: 'smartphone'
       model: 'Muze F3'
+    - regex: 'PSP7511DUO'
+      device: 'smartphone'
+      model: 'Muze B7'
     - regex: 'PSP3423DUO'
       device: 'smartphone'
       model: 'Wize R3'
     - regex: 'PSP3510DUO'
       device: 'smartphone'
       model: 'Wize G3'
+    - regex: 'PSP3537DUO'
+      device: 'smartphone'
+      model: 'Wize NV3'
     # explicit tables models
     - regex: 'PMT3277_3G'
       model: 'MultiPad Ranger 7.0" 3G'
