feat(device) detect brand GOCLEVER model: Netbook R103 feat(device) detect brand iLife models: WTAB 714, WTAB 805 feat(device) detect brand Explay models: Winner 8, Winner 7

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6509,6 +6509,9 @@ GOCLEVER:
       model: 'Quantum $1 Lite'
     - regex: '((?:QUANTUM|ARIES|INSIGNIA|ORION|ELIPSO)[ _-]?[^;/]+)(?: Build|\))'
       model: '$1'
+    - regex: 'NETBOOK R103'
+      device: 'desktop'
+      model: 'Netbook R103'
     - regex: 'GOCLEVER[ _-]TAB[ _-]?([^;/]+) Build'
       model: 'TAB $1'
       device: 'tablet'
@@ -6540,7 +6543,7 @@ GoMobile:
 
 # Explay
 Explay:
-  regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-4]|RioPlay|Leader|Pulsar|Infinityll|Joy_TV|Imperium[78]|Indigo|Lagoon|Tornado(?! 348)(?:3G)?|Onyx(?!_[A-Z]{1,2})'
+  regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-4]|RioPlay|Leader|Pulsar|Infinityll|Joy_TV|Imperium[78]|Winner[78]|Indigo|Lagoon|Tornado(?! 348)(?:3G)?|Onyx(?!_[A-Z]{1,2})'
   device: 'tablet'
   models:
     - regex: 'ActiveD[ _]7.4[ _]3G'
@@ -6561,6 +6564,8 @@ Explay:
       model: 'sQuad $1'
     - regex: 'Onliner([1-4])'
       model: 'Onliner $1'
+    - regex: 'Winner([78])'
+      model: 'Winner $1'
     - regex: 'Atlant(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Atlant'
@@ -8454,7 +8459,7 @@ Impression:
 
 #iLife or i-life (lifedigital.com)
 iLife:
-  regex: '(ITELL[_ ](?:K3300|K3500N?|K4700))(?:[);/ ]|$)'
+  regex: '(ITELL[_ ](?:K3300|K3500N?|K4700)|WTAB_714|WTAB 805)(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
